refactor: remove legacy wishlist components and API, implement new structure for member wishlists
(working in local enviroment, next version will be prod and hoting test)

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "import:pairs": "node --loader ts-node/esm scripts/importPairsFromCsv.ts data/pairs.csv"
+    "seed:csv": "ts-node prisma/seed-from-csv.ts prisma/data/serdio-2025.csv"
   },
   "dependencies": {
     "@prisma/adapter-pg": "^7.0.0",
