--- a/package.json
+++ b/package.json
@@ -14,21 +14,24 @@
     "@prisma/adapter-pg": "^7.0.0",
     "@prisma/client": "^6.19.0",
     "dotenv": "^17.2.3",
+    "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.17",
     "@types/node": "^20.19.25",
     "@types/pg": "^8.15.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.22",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
+    "postcss": "^8.5.6",
     "prisma": "^6.19.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.17",
     "ts-node": "^10.9.2",
     "typescript": "^5"
   }
